# robotic_arm_spraying

./: README.md
Dockerfile/: Dockerfile  README.md
ros2_ws/: trajectory_output.csv
ros2_ws/install/: setup.sh
ros2_ws/install/spraying_pathways/lib/spraying_pathways/: cartesian_path_planner_cubes_v2_node  cartesian_path_planner_cubes_v3_node  cartesian_path_planner_trajectory_v1_node  follow_joints_positions_node  go_home_node
ros2_ws/install/spraying_pathways/share/ament_index/resource_index/package_run_dependencies/: spraying_pathways
ros2_ws/install/spraying_pathways/share/ament_index/resource_index/parent_prefix_path/: spraying_pathways
ros2_ws/install/spraying_pathways/share/spraying_pathways/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/spraying_pathways/share/spraying_pathways/launch/: bringup_v4.launch.py
ros2_ws/install/spraying_pathways/share/spraying_pathways/models/black_table/: model.sdf
ros2_ws/install/spraying_pathways/share/spraying_pathways/models/box_0_5/: model.sdf
ros2_ws/install/spraying_pathways/share/spraying_pathways/urdf/: 2d_lidar.urdf.xacro  depth_camera.urdf.xacro  my_robot.urdf.xacro
ros2_ws/install/spraying_pathways/share/spraying_pathways/worlds/: table_world.world
ros2_ws/install/ur_simulation_gazebo/share/ament_index/resource_index/parent_prefix_path/: ur_simulation_gazebo
ros2_ws/log/: latest_build
ros2_ws/src/spraying_pathways/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/spraying_pathways/launch/: bringup_v5.launch.py
ros2_ws/src/spraying_pathways/models/box_0_5/: model.sdf
ros2_ws/src/spraying_pathways/models/human_arm/: model.config  model.sdf
ros2_ws/src/spraying_pathways/scripts/: depth_dip_detector_v1.py  depth_dip_detector_v2.py  plot_trajectory_log.py  pointcloud_transform_and_unknown_filter_v2.py  pointcloud_transform_and_unknown_filter_v4.py  remap_pointcloud_frame.py  trajectory_logger.py  transform_camera_pointcloud.py  unknown_object_detector.py
ros2_ws/src/spraying_pathways/src/: cartesian_path_planner_cubes_test_go_v1.cpp  cartesian_path_planner_cubes_test_go_v2.cpp  cartesian_path_planner_cubes_test_v1.cpp  cartesian_path_planner_cubes_test_v2.cpp  cartesian_path_planner_cubes_v2.cpp  cartesian_path_planner_cubes_v3.cpp  cartesian_path_planner_cubes_v4.cpp  cartesian_path_planner_trajectory_v1.cpp  flat_fan_spraying.cpp  flat_fan_spraying_v2.cpp  go_home.cpp  inspect_flatness.cpp  lidar_surface_scanner.cpp  moving_obstacle.cpp  test.cpp
ros2_ws/src/spraying_pathways/urdf/: depth_camera.urdf.xacro  depth_camera_ee.urdf.xacro  my_robot.urdf.xacro
